test2-2023-08-27.log
regress/test2.fir:247424:17: error: use of unknown declaration 'validif'
    tmp20070 <= validif(head(UInt<3>(6), 1), SInt<24>("b-11111101000010001010101"))
                ^
===-------------------------------------------------------------------------===
                         ... Execution time report ...
===-------------------------------------------------------------------------===
  Total Execution Time: 1.4236 seconds

  ----Wall Time----  ----Name----
    1.4214 ( 99.8%)  FIR Parser
    0.0000 (  0.0%)    Parse annotations
    0.0000 (  0.0%)    Parse OMIR
    1.3401 ( 94.1%)    Parse modules
    0.0022 (  0.2%)  Rest
    1.4236 (100.0%)  Total

{
  totalTime: 1.442,
  maxMemory: 171208704
}
